# codebase

./: .gitignore  README.md
angular/sampleapp/: README.md  angular.json  package-lock.json  package.json
angular/sampleapp/src/app/: app.component.ts
cpp/v17/sampleapp/: CMakeLists.txt
cpp/v17/sampleapp/conf/: config.h.in
cpp/v17/sampleapp/inc/: sampleapp.hpp
cpp/v17/sampleapp/src/: main.cpp  sampleapp.cpp
cpp/v17/sampleapp/test/: CMakeLists.txt
cpp/v17/sampleapp/test/inc/: sampleapptest.hpp
cpp/v17/sampleapp/test/src/: sampleapptest.cpp
cpp/v20/samplelib/: CMakeLists.txt
cpp/v20/samplelib/conf/: config.h.in
cpp/v20/samplelib/inc/: graph.hpp  graphbuilder.hpp  node.hpp  utils.hpp
cpp/v20/samplelib/inc/gcc_10/: node.hpp
cpp/v20/samplelib/inc/gcc_9/: node.hpp
cpp/v20/samplelib/src/: graphbuilder.cpp
cpp/v20/samplelib/test/: CMakeLists.txt
cpp/v20/samplelib/test/inc/: graphtests.hpp  nodetests.hpp
cpp/v20/samplelib/test/src/: graphtests.cpp  nodetests.cpp
